--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "init:gitgnore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
+    "test:css": "stylelint sass/*.scss",
+    "test:js": "eslint js/*.js",
     "build": "npm-run-all build:* && npm run test",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
@@ -33,6 +35,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "browser-sync": "^3.0.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "html-validate": "^8.8.0",
     "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
