--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,9 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "windows"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+    "quotes": ["error", "double", { "allowTemplateLiterals": true }],
+    "semi": ["error", "always"],
+    "no-console": ["off"],
+    "no-prototype-builtins": ["off"]
   }
 }
