--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   "plugins": ["react"],
   "rules": {
     "indent": ["error", 2],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double", { "allowTemplateLiterals": true }],
     "semi": ["error", "always"],
     "no-console": ["off"],
