--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double", { "allowTemplateLiterals": true }],
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
     "semi": ["error", "always"],
     "no-console": ["off"],
     "no-prototype-builtins": ["off"]
