--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,8 @@
     "semi": ["error", "always"],
     "no-console": ["off"],
     "no-prototype-builtins": ["off"]
+  },
+  "globals": {
+    "Handlebars": false
   }
 }
